--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "co-monk": "^1.0.0",
     "koa": "^1.2.4",
     "koa-logger": "^1.3.0",
+    "koa-mount": "^1.3.0",
     "koa-route": "^2.4.2",
+    "koa-router": "^5.4.0",
     "monk": "^3.1.3",
     "supertest": "^2.0.1"
   },
